--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "hardhat": "^2.9.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.6.0"
+    "@openzeppelin/contracts": "^4.6.0",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.31"
   }
 }
